--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -132,7 +132,7 @@
         android:layout_alignStart="@+id/linearLayout" />
 
     <Switch
-        android:text="Auto"
+        android:text="Sync"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -156,7 +156,9 @@
             android:layout_alignTop="@+id/v3_rl"
             android:layout_toStartOf="@+id/linearLayout"
             android:layout_marginTop="11dp"
-            android:id="@+id/textView" />
+            android:id="@+id/textView"
+            android:paddingLeft="15dp"
+            android:textAppearance="@android:style/TextAppearance.Material.Caption" />
 
         <TextView
             android:text="Not ready to exchange key."
@@ -167,8 +169,7 @@
             android:layout_alignBaseline="@+id/textView"
             android:layout_alignBottom="@+id/textView"
             android:layout_toEndOf="@+id/textView"
-            android:textSize="16sp"
-            android:textColor="#000" />
+            android:textColorLink="?android:attr/textColorPrimaryActivated" />
 
         <Button
             android:text="Auth"
