--- a/app/src/main/res/layout/activity_key_exchange.xml
+++ b/app/src/main/res/layout/activity_key_exchange.xml
@@ -11,75 +11,56 @@
     tools:context="com.example.gopa2000.fyp_app.KeyExchangeActivity">
 
     <TextView
-        android:text="Generated Message:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="46dp"
-        android:id="@+id/MessageLabel"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/MessageLabel"
-        android:layout_alignEnd="@+id/MessageLabel"
-        android:layout_marginEnd="32dp"
-        android:layout_marginTop="14dp"
-        android:id="@+id/message_tv"
-        android:textAppearance="@android:style/TextAppearance.Material.Caption" />
-
-    <TextView
         android:text="Transmitted Message (base 64)"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/TransMsg_label"
+        android:layout_marginTop="27dp"
         android:layout_below="@+id/message_tv"
-        android:layout_alignStart="@+id/MessageLabel"
-        android:layout_marginTop="74dp"
-        android:id="@+id/TransMsg_label" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/TransMsg_label"
-        android:layout_alignStart="@+id/TransMsg_label"
-        android:layout_marginTop="9dp"
-        android:id="@+id/tm_b64"
-        android:textAppearance="@android:style/TextAppearance.Material.Caption" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tm_hex_label"
-        android:layout_toEndOf="@+id/tm_b64"
-        android:layout_marginTop="8dp"
-        android:id="@+id/hex_message"
-        android:textAppearance="@android:style/TextAppearance.Material.Caption" />
+        android:layout_alignStart="@+id/MessageLabel" />
 
     <TextView
         android:text="Key Exchange Result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/hex_message"
-        android:layout_alignStart="@+id/hex_message"
-        android:layout_marginTop="79dp"
-        android:id="@+id/result_label" />
-
-    <TextView
-        android:text="Transmitted Message (hex)"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="92dp"
-        android:id="@+id/tm_hex_label"
+        android:layout_marginTop="20dp"
+        android:id="@+id/result_label"
         android:layout_below="@+id/tm_b64"
-        android:layout_alignStart="@+id/hex_message" />
+        android:layout_alignStart="@+id/result_tv" />
 
     <TextView
+        android:text="Generated Message:"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/MessageLabel"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="14dp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:id="@+id/result_tv"
+        android:textAppearance="@android:style/TextAppearance.Material.Caption"
         android:layout_below="@+id/result_label"
-        android:layout_alignStart="@+id/result_label"
-        android:layout_marginTop="16dp"
-        android:id="@+id/result_tv" />
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:id="@+id/tm_b64"
+        android:textAppearance="@android:style/TextAppearance.Material.Caption"
+        android:layout_below="@+id/TransMsg_label"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/message_tv"
+        android:textAppearance="@android:style/TextAppearance.Material.Caption"
+        android:layout_marginTop="6dp"
+        android:layout_below="@+id/MessageLabel"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
