--- a/app/src/main/res/layout/activity_key_exchange_actvity_receiver.xml
+++ b/app/src/main/res/layout/activity_key_exchange_actvity_receiver.xml
@@ -11,16 +11,6 @@
     tools:context="com.example.gopa2000.fyp_app.KeyExchangeActvityReceiver">
 
     <TextView
-        android:text="Received Message (Base64)"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="62dp"
-        android:id="@+id/rec_label"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/rec_label"
@@ -28,25 +18,6 @@
         android:layout_marginTop="13dp"
         android:id="@+id/b64_tv"
         android:textAppearance="@android:style/TextAppearance.Material.Caption" />
-
-    <TextView
-        android:text="Hex"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
-        android:id="@+id/hex_label"
-        android:layout_below="@+id/b64_tv"
-        android:layout_alignStart="@+id/b64_tv" />
-
-    <TextView
-        android:text="Original Message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/hex_label"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="119dp"
-        android:id="@+id/org_label" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -65,4 +36,32 @@
         android:layout_marginTop="9dp"
         android:id="@+id/org_msg"
         android:textAppearance="@android:style/TextAppearance.Material.Caption" />
+
+    <TextView
+        android:text="Received Message (Base64)"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:id="@+id/rec_label"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/org_label" />
+
+    <TextView
+        android:text="Hex"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="18dp"
+        android:id="@+id/hex_label"
+        android:layout_below="@+id/b64_tv"
+        android:layout_alignStart="@+id/b64_tv" />
+
+    <TextView
+        android:text="Original Message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="26dp"
+        android:id="@+id/org_label"
+        android:layout_below="@+id/hex_msg"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
